--- a/site/.kobweb/conf.yaml
+++ b/site/.kobweb/conf.yaml
@@ -8,6 +8,6 @@ server:
       script: "build/dist/js/developmentExecutable/appxyz.js"
     prod:
       script: "build/dist/js/productionExecutable/appxyz.js"
-      siteRoot: ".kobweb/site"
+      siteRoot: "../site-out"
 
   port: 8080
